[package]
name = "ccnl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = {version = "4.4.7", optional = true, features = ["derive"]}
hmac = "0.12.1"
md-5 = "0.10.6"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
ring = "0.17.5"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.108"
thiserror = "1.0.50"

[features]
clap_arg_prase = ["clap"]
